--- a/src/VideoPlayer.css
+++ b/src/VideoPlayer.css
@@ -1,7 +1,45 @@
-.video-js {
-  height: 100%;
-  width: 100%;
+.container-player {
+  position: relative;
+/*  width: 100%;
+  height: 100%;*/
+
+  /*border: 1px solid red;*/
 }
+
+
+.html5-video-player {
+/*  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  overflow: hidden;*/
+}
+
+.html5-video-container {
+  z-index: 10;
+  position: relative;
+}
+
+
+.video-js {
+  display: block;
+  width: 100%;
+  height: 300px;
+/*  border: 4px solid green;
+*/
+}
+
+.playlist-schedule {
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  font-size: 16px;
+  color: #ffffff !important;
+  z-index: 3;
+  opacity: 0.6;
+  cursor: pointer;
+}
+
 
 .nextVideo,
 .prevVideo {
@@ -25,3 +63,34 @@
 .prevVideo {
   left: 2%;
 }
+
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+  .video-js {
+    height: 400px;
+  }
+
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+
+
+}
+
+
+
+
+
+
